# mantis-ts

./: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
assistant/scripts/: print-compiled-contracts.ts
assistant/src/: context.ts  contracts.ts  helpers.test.ts  helpers.ts  logger.ts  orchestrator.ts  personality.ts  pipeline.test.ts  pipeline.ts  runner.ts  types.ts
assistant/src/contracts/: answer.shared.ts  answer.ts  compiled-contracts.test.ts  conversational.answer.ts  definition.ts  error.channel.ts  image.recognition.ts  intent.classification.ts  language.detection.ts  parsing.ts  personality.selection.ts  registry.ts  response.formatting.ts  scoring.evaluation.ts  strict.answer.ts  text.transformation.ts  tool.argument.extraction.ts  tool.argument.verification.ts
assistant/src/models/: ollama.ts
assistant/src/pipeline/: config.ts  language.ts  type-guards.ts  types.ts
assistant/src/test-helpers/: pipeline-mocks.ts
assistant/src/tools/: definition.ts  registry.test.ts  registry.ts  schema-parity.test.ts
desktop/: package-lock.json  package.json  tsconfig.json  vite.config.mts  vite.config.ts
desktop/src/: App.tsx  avatar.ts  bubble-renderer.ts  context-store.ts  desktop-bootstrap.tsx  evaluation-utils.ts  icon.ts  idle-chatter.ts  image-attachments.ts  index.html  main.ts  main.tsx  screen-capture.ts  styles.css  tauri-invoke.ts  ui-handlers.ts  ui-state.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  ENHANCEMENT_PLAN.md
(+64 files in other folders)
